clusters/cluster01/nexus-repository/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-repository
  annotations:
    argocd.argoproj.io/sync-wave: "0"
