clusters/cluster01/nexus-repository/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus-repository
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - name: nexus
        image: docker.io/sonatype/nexus3:3.71.0
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
        - containerPort: 8082
          name: docker-hosted
          protocol: TCP
        - containerPort: 8083
          name: docker-proxy
          protocol: TCP
        resources:
          requests:
            cpu: "500m"
            memory: "2Gi"
          limits:
            cpu: "2"
            memory: "4Gi"
        volumeMounts:
        - name: nexus-data
          mountPath: /nexus-data
        livenessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 180
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 6
      volumes:
      - name: nexus-data
        persistentVolumeClaim:
          claimName: nexus-data
