clusters/cluster01/nexus-repository/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus-repository
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
  - name: docker-hosted
    port: 8082
    targetPort: 8082
    protocol: TCP
  - name: docker-proxy
    port: 8083
    targetPort: 8083
    protocol: TCP
  selector:
    app: nexus
