clusters/cluster01/nexus-repository/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nexus
  namespace: nexus-repository
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  to:
    kind: Service
    name: nexus
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
